tests/paczka1/fuzzy1/31343961.err
Error in line 8: iyZBhHYs S545 140,43
Error in line 1: A608 A240 73,5
Error in line 9: Yzh58lPxc6F A240 40,5
Error in line 24: 3rgckQwCYu A679 53,9
